--- a/sections/lightgallery.liquid
+++ b/sections/lightgallery.liquid
@@ -20,6 +20,7 @@
   <style>
     /* --- Conteneur centré --- */
     .lightgallery-wrapper {
+      margin-top: 16px;
       max-width: 750px;
       margin-left: auto;
       margin-right: auto;
