fix: remove pub

--- a/sections/parralax.liquid
+++ b/sections/parralax.liquid
@@ -947,7 +947,7 @@
   "settings": [
     {
       "type": "paragraph",
-      "content": "Parallax is hidden on mobile by default, because it won't work on some mobile devices [Need help?](https:\/\/websensepro.com\/contact-us\)"
+      "content": "Parallax is hidden on mobile by default, because it won't work on some mobile devices"
     },
     {
       "type": "checkbox",
