feat: add precommand

--- a/sections/main-cart-items.liquid
+++ b/sections/main-cart-items.liquid
@@ -110,6 +110,26 @@
 
                       <a href="{{ item.url }}" class="cart-item__name h4 break">{{ item.product.title | escape }}</a>
 
+                      {%- comment -%} Précommande + ETA (affichage propre) {%- endcomment -%}
+                      {%- assign is_preorder = false -%}
+                      {%- if item.properties and item.properties.Preorder == 'true' -%}
+                        {%- assign is_preorder = true -%}
+                      {%- endif -%}
+                      {%- assign eta_iso = '' -%}
+                      {%- if item.properties and item.properties['Estimated shipping'] -%}
+                        {%- assign eta_iso = item.properties['Estimated shipping'] -%}
+                      {%- endif -%}
+                      {%- if is_preorder -%}
+                        <div class="cart-line__preorder">
+                          <span class="badge">{{ 'products.product.preorder' | t }}</span>
+                          {%- if eta_iso != blank -%}
+                            <div class="cart-line__eta">
+                              Expédition estimée&nbsp;: {{ eta_iso | date: '%-d %B %Y' }}
+                            </div>
+                          {%- endif -%}
+                        </div>
+                      {%- endif -%}
+
                       {%- if item.original_price != item.final_price -%}
                         <div class="cart-item__discounted-prices">
                           <span class="visually-hidden">
@@ -147,7 +167,11 @@
 
                           {%- for property in item.properties -%}
                             {%- assign property_first_char = property.first | slice: 0 -%}
-                            {%- if property.last != blank and property_first_char != '_' -%}
+                            {%- if property.last != blank
+                              and property_first_char != '_'
+                              and property.first != 'Preorder'
+                              and property.first != 'Estimated shipping'
+                            -%}
                               <div class="product-option">
                                 <dt>{{ property.first }}:</dt>
                                 <dd>
