--- a/sections/cart-notification-product.liquid
+++ b/sections/cart-notification-product.liquid
@@ -17,6 +17,20 @@
           <p class="caption-with-letter-spacing light">{{ item.product.vendor }}</p>
         {%- endif -%}
         <h3 class="cart-notification-product__name h4">{{ item.product.title | escape }}</h3>
+
+        {%- comment -%} Badge Précommande + ETA (sans casser le style) {%- endcomment -%}
+        {%- if item.properties and item.properties.Preorder == 'true' -%}
+          {%- assign eta_iso = item.properties['Estimated shipping'] -%}
+          <div class="cart-line__preorder">
+            <span class="badge">{{ 'products.product.preorder' | t }}</span>
+            {%- if eta_iso != blank -%}
+              <span class="cart-line__eta" style="font-size:.9rem;opacity:.85;">
+                Expédition estimée&nbsp;: {{ eta_iso | date: '%-d %B %Y' }}
+              </span>
+            {%- endif -%}
+          </div>
+        {%- endif -%}
+
         <dl>
           {%- unless item.product.has_only_default_variant -%}
             {%- for option in item.options_with_values -%}
@@ -26,9 +40,15 @@
               </div>
             {%- endfor -%}
           {%- endunless -%}
+
+          {%- comment -%} Masquer nos propriétés techniques {%- endcomment -%}
           {%- for property in item.properties -%}
             {%- assign property_first_char = property.first | slice: 0 -%}
-            {%- if property.last != blank and property_first_char != '_' -%}
+            {%- if property.last != blank
+              and property_first_char != '_'
+              and property.first != 'Preorder'
+              and property.first != 'Estimated shipping'
+            -%}
               <div class="product-option">
                 <dt>{{ property.first }}:</dt>
                 <dd>
@@ -44,6 +64,7 @@
             {%- endif -%}
           {%- endfor -%}
         </dl>
+
         {%- if item.selling_plan_allocation != null -%}
           <p class="product-option">{{ item.selling_plan_allocation.selling_plan.name }}</p>
         {%- endif -%}
