--- a/snippets/cart-drawer.liquid
+++ b/snippets/cart-drawer.liquid
@@ -601,7 +601,7 @@
         </div>
 
         <!-- CTAs -->
-
+        {% render 'preorder-legal' %}
         <div class="cart__ctas" {{ block.shopify_attributes }}>
           <button
             type="submit"
