--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -298,6 +298,8 @@
         document.documentElement.classList.add('shopify-design-mode');
       }
     </script>
+
+    <script src="{{ 'preorder-legal.js' | asset_url }}?v=1" defer></script>
   </head>
 
   <body class="gradient{% if settings.animations_hover_elements != 'none' %} animate--hover-{{ settings.animations_hover_elements }}{% endif %}">
