--- a/sections/lightgallery.liquid
+++ b/sections/lightgallery.liquid
@@ -6,7 +6,7 @@
   <div class="lightgallery-wrapper">
     <div id="lightgallery-{{ section.id }}" class="lg-masonry">
       {% for block in section.blocks %}
-        <a href="{{ block.settings.image | image_url: width: 1600 }}">
+        <a href="{{ block.settings.image | image_url: width: 1600 }}" data-sub-html="">
           <img
             src="{{ block.settings.image | image_url: width: 600 }}"
             alt="{{ block.settings.image.alt | escape }}"
@@ -81,6 +81,7 @@
           plugins: typeof lgZoom !== 'undefined' && typeof lgThumbnail !== 'undefined' ? [lgZoom, lgThumbnail] : [],
           speed: 400,
           download: false,
+          getCaptionFromTitleOrAlt: false,
           mobileSettings: {
             controls: true,
             showCloseIcon: true,
