--- a/sections/main-cart-footer.liquid
+++ b/sections/main-cart-footer.liquid
@@ -23,6 +23,7 @@
   data-id="{{ section.id }}"
 >
   <div class="page-width">
+    {% render 'preorder-legal' %}
     <div class="cart__footer isolate section-{{ section.id }}-padding">
       {%- if settings.show_cart_note -%}
         <cart-note class="cart__note field">
@@ -147,7 +148,7 @@
     {
       "type": "header",
       "content": "t:sections.all.padding.section_padding_heading"
-    },    
+    },
     {
       "type": "range",
       "id": "padding_top",
