feat: update body scale

--- a/sections/collapsible-content-autohide.liquid
+++ b/sections/collapsible-content-autohide.liquid
@@ -132,7 +132,7 @@
 
 {% schema %}
 {
-  "name": "Collapsible content – auto-hide",
+  "name": "Collapsible auto-hide",
   "tag": "section",
   "class": "section",
   "disabled_on": {
